bolded titles of each card

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -340,10 +340,15 @@ position: relative;
 
 }
 
-.font-color{
+.font-title {
   color: white;
   font-weight: normal;
   font-family: Fabrica;
+  font-weight: bold;
+}
+
+.font-description {
+  color: white;
 }
   .band-image {
     position: relative;
