--- a/app/views/home/_bands.html.erb
+++ b/app/views/home/_bands.html.erb
@@ -4,11 +4,11 @@
       <div class="small-4 columns">
         <div class="card">
 
-        <%= link_to band_path(band.id), class: "font-color" do %>
-            <%= band.name  %>
+        <%= link_to band_path(band.id) do %>
+            <p class="font-title"><%= band.name  %> </p>
             <%= image_tag band.poster.profile, class: "band-image"%>
 
-           <%= band.description %>
+           <p class="font-description"><%= band.description %></p>
 
         </div>
       </div>
