working on centering new band form

--- a/app/assets/stylesheets/band.scss
+++ b/app/assets/stylesheets/band.scss
@@ -62,6 +62,13 @@ main {
 .apply-button {
   background-color: red;
   border-radius: 28px;
+}
 
-  
+
+
+form{
+  width:300px;
+  display: inline-block;
+  align_left: 66%;
+
 }
