Got the band and musician data to pop on the map and I can filter

--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -6,8 +6,16 @@
   width: 700px;
 }
 
+.filter {
+  display: block;
+}
+
+.filter_type {
+  display: inline-block;
+}
+
 #position{
-  width: 200px
+  width: 200px;
 }
 
 #genre{
