--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,130 +1,11 @@
-// @import "bourbon";
-// @import "neat";
-//
-// @import 'http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css';
-// @import 'http://fonts.googleapis.com/css?family=Roboto:700,400';
-//
-// body{
-//   background-image: url(background/564960.jpg);
-//   background-size: cover;
-//   @include outer-container(12);
-//
-//   -webkit-font-smoothing: antialiased;
-// }
-//
-// main {
-//   @include outer-container;
-//   .bands-list { @include span-columns(3);
-//   }
-//
-//   .title {
-//     font-size: 100px;
-//   }
-//
-//   h1 {
-//     text-align: center;
-//     color: white;
-//   }
-//
-//   h2 {
-//     text-align: center;
-//   }
-//
-//   h3 {
-//     color: white;
-//     margin-top: 25px;
-//     text-align: center;
-//     margin-left: 400px;
-//   }
-//
-//   ul.band-list {
-//     margin-left: 400px;
-//
-//     h1 {
-//       color: white;
-//       margin-bottom: 25px;
-//     }
-//
-//     li {
-//       text-align: center;
-//       -webkit-box-shadow:
-//         0 2px 8px rgba(0,0,0,0.5),
-//         inset 0 1px rgba(255,255,255,0.3),
-//         inset 0 10px 20px rgba(255,255,255,0.25),
-//         inset 0 -15px 30px rgba(0,0,0,0.3);
-//
-//       a {
-//         display: block;
-//         color: white;
-//       }
-//     }
-//   }
-//
-//   ul.musicians-list {
-//     margin-left: 300px;
-//     li {
-//       text-align: center;
-//       margin-bottom: 20px;
-//       -webkit-box-shadow:
-//         0 2px 8px rgba(0,0,0,0.5),
-//         inset 0 1px rgba(255,255,255,0.3),
-//         inset 0 10px 20px rgba(255,255,255,0.25),
-//         inset 0 -15px 30px rgba(0,0,0,0.3);
-//       border: blurred;
-//
-//       .social_icons {
-//         display: inline-block;
-//         width: 48px;
-//         height: 48px;
-//         line-height: 48px;
-//         text-align: center;
-//         border-radius: 50%;
-//         outline: 0;
-//
-//         box-shadow:
-//         0 2px 4px rgba(0,0,0, 0.12),
-//         0 2px 4px rgba(0,0,0, 0.24);
-//         }
-//
-//         h3.position_text
-//         { margin-top: 50px;
-//
-//         }
-//         .card_article{
-//           width: 100%;
-//         }
-//
-//         a.musician_aboutme {
-//
-//         }
-//
-//       p {
-//         font-size: 0.77em;
-//
-//       }
-//
-//       a {
-//       display: block;
-//       color: white;
-//
-//       }
-//     }
-//   }
-// }
+main {
+  max-width: 60%;
+  margin-left: auto;
+  margin-right: auto;
+}
 
-#sidebar {
-  background-color: white;
-  color: black;
-  position: fixed;
-  top: 60px;
-  right: -20%;
-  width: 20%;
-
-  transition: right 0.25s;
-
-  .is-open {
-    right: 0;
-  }
+.search-category-list {
+  
 }
 
 // .hero {
