--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,78 +1,79 @@
-<h2>Sign up</h2>
+<div class="container">
+  <h2>Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
+    <div class="field">
+      <%= f.label :email, "Email Address" %><br />
+      <%= f.email_field :email, autofocus: true %>
+    </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
+    <div class="field">
+      <%= f.label :password %>
+      <% if @minimum_password_length %>
+      <em>(Must be at least <%= @minimum_password_length %> characters long)</em>
+      <% end %><br />
+      <%= f.password_field :password, autocomplete: "off" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
+    <div class="field">
+      <%= f.label :password_confirmation, "Password Confirmation" %><br />
+      <%= f.password_field :password_confirmation, autocomplete: "off" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :firstname %><br />
-    <%= f.text_field :firstname %>
-  </div>
+    <div class="field">
+      <%= f.label :firstname, "First Name" %><br />
+      <%= f.text_field :firstname %>
+    </div>
 
-  <div class="field">
-    <%= f.label :lastname %><br />
-    <%= f.text_field :lastname %>
-  </div>
+    <div class="field">
+      <%= f.label :lastname, "Last Name" %><br />
+      <%= f.text_field :lastname %>
+    </div>
 
-  <div class="field">
-    <%= f.label :address %><br />
-    <%= f.text_field :address %>
-  </div>
+    <div class="field">
+      <%= f.label :address %><br />
+      <%= f.text_field :address %>
+    </div>
 
-  <div class="field">
-    <%= f.label :city %><br />
-    <%= f.text_field :city %>
-  </div>
+    <div class="field">
+      <%= f.label :city %><br />
+      <%= f.text_field :city %>
+    </div>
 
-  <div class="field">
-    <%= f.label :province %><br />
-    <%= f.select :province, options_for_select("British Columbia":"BC", "Alberta":"AB", "Saskatchewan":"SK",
-                                               "Manitoba":"MB", "Ontario":"ON", "Quebec":"QC", "New Brunswick":"NB",
-                                               "Newfoundland":"NL", "Nova Scotia":"NS", "Prince Edward Island":"PE",
-                                               "Northwest Territories":"NT", "Yukon":"YT", "Nunavut":"NU") %>
-  </div>
+    <div class="field">
+      <%= f.label :province, "Select your province" %><br />
+      <%= f.select :province, options_for_select("Alberta":"AB", "British Columbia":"BC", "Manitoba":"MB", "New Brunswick":"NB", "Newfoundland & Labrador":"NL", "Northwest Territories":"NT", "Nova Scotia":"NS", "Nunavut":"NU", "Ontario":"ON", "Prince Edward Island":"PE", "Quebec":"QC", "Saskatchewan":"SK", "Yukon":"YT") %>
+    </div>
 
-  <div class="field">
-    <%= f.label :postalcode %>
-    <em>(format:  'A1B 2C3')</em><br />
-    <%= f.text_field :postalcode %>
-  </div>
+    <div class="field">
+      <%= f.label :postalcode %>
+      <em>(format:  'A1B 2C3')</em><br />
+      <%= f.text_field :postalcode %>
+    </div>
 
-  <div class="field">
-    <%= f.label :avatar %><br />
-    <%= f.file_field :avatar %>
-  </div>
+    <div class="field">
+      <%= f.label :avatar %><br />
+      <%= f.file_field :avatar %>
+    </div>
 
-  <div class="field">
-    <%= f.label :description %><br />
-    <%= f.text_area :description %>
-  </div>
+    <div class="field">
+      <%= f.label :description, "Bio" %>
+      <em>Tell others about yourself</em><br />
+      <%= f.text_area :description %>
+    </div>
 
-  <div class="field">
-    <%= f.label :youtube_url %><br />
-    <%= f.text_field :youtube_url %>
-  </div>
+    <div class="field">
+      <%= f.label :youtube_url %>
+      <em>Upload a video showcasing your talents</em><br />
+      <%= f.text_field :youtube_url %>
+    </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
+    <div class="actions">
+      <%= f.submit "Sign up" %>
+    </div>
+  <% end %>
 
-<%= render "devise/shared/links" %>
+  <%= render "devise/shared/links" %>
+</div>
