--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -2,8 +2,8 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 #searchmap {
-  height: 400px;
-  width: 700px;
+  height: 500px;
+  width: 1000px;
 }
 
 .filter {
@@ -12,6 +12,16 @@
 
 .filter_type {
   display: inline-block;
+}
+
+main {
+  margin: 2%;
+  padding: 0;
+  display: inline;
+  float: left;
+  overflow: hidden;
+  width:  100%;
+  border: none;
 }
 
 #position{
