--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,7 @@
       <div class="title-bar-right">
         <ul class="menu">
           <% if musician_signed_in? %>
+          <li><%= link_to "Search", search_index_path %></li>
             <li><%= link_to "Create a band", new_band_path %></li>
             <li><span>Logged in as: <%= current_musician.firstname %>&nbsp&nbsp</span></li>
             <li><%= image_tag current_musician.avatar.thumb %></li>
