Updated cards on homepage. Changed limit of bands and musicians shown on homepage.

--- a/app/assets/stylesheets/band.scss
+++ b/app/assets/stylesheets/band.scss
@@ -32,26 +32,17 @@ aside {
   border-radius: 28px;
 }
 
-main {
-  margin: 2%;
-  float: left;
-  width: 65%;
-  padding: 30px;
-  border: 5px solid #ccc;
-  border-radius: 28px;
-
-  h2 {
-    font-size: 1em;
-  }
+h2 {
+  font-size: 1em;
 }
 
-#bands-owned {
-
-}
-
-#member-of-bands {
-
-}
+// #bands-owned {
+//
+// }
+//
+// #member-of-bands {
+//
+// }
 
 #map {
   margin-left: auto;
