--- a/app/views/home/_musicians.html.erb
+++ b/app/views/home/_musicians.html.erb
@@ -1,31 +1,30 @@
 <div class="row" data-equalizer data-equalize-on="medium" id="test-eq">
     <% @musicians.each do |musician| %>
     <div class="medium-4 columns">
+      <div class="equalizer">
+        <div class="card">
+          <%= link_to musician_path(musician.id) do %>
 
-      <div class="card">
-        <%= link_to musician_path(musician.id) do %>
+            <p class="font-title"><%= musician.firstname %> <%= musician.lastname %></p>
 
-          <p class="font-title"><%= musician.firstname %> <%= musician.lastname %></p>
+            <%= image_tag musician.avatar.profile, class: "musician-image" %>
 
-          <%= image_tag musician.avatar.profile, class: "musician-image" %>
+            <% musician.positions.each do |position| %>
+              <!-- <%= position.description %><br /> -->
+              <%= image_tag("skills/lead.png", size:  "50x50") if position.description == "lead" %>
+              <%= image_tag("skills/singer.png", size:  "50x50") if position.description == "singer"%>
+              <%= image_tag("skills/drummer.png", size:  "50x50") if position.description == "drummer"%>
+              <%= image_tag("skills/keyboard.png", size:  "50x50") if position.description == "keyboard"%>
+              <%= image_tag("skills/bass.png", size:  "50x50") if position.description == "bass" %>
+            <% end %>
+          <br/>
 
-          <% musician.positions.each do |position| %>
-            <!-- <%= position.description %><br /> -->
-            <%= image_tag("skills/lead.png", size:  "50x50") if position.description == "lead" %>
-            <%= image_tag("skills/singer.png", size:  "50x50") if position.description == "singer"%>
-            <%= image_tag("skills/drummer.png", size:  "50x50") if position.description == "drummer"%>
-            <%= image_tag("skills/keyboard.png", size:  "50x50") if position.description == "keyboard"%>
-            <%= image_tag("skills/bass.png", size:  "50x50") if position.description == "bass" %>
+          <% if current_musician.present? && current_musician.has_long_lat? && musician.has_long_lat? %>
+            <%= musician.display_distance_to(@musician) %> km away<br />
+          <% else %>
+          <p class="font-description">  Based in <%= musician.city %> </p>
           <% end %>
-        <br/>
-
-        <% if current_musician.present? && current_musician.has_long_lat? && musician.has_long_lat? %>
-          <%= musician.display_distance_to(@musician) %> km away<br />
-        <% else %>
-        <p class="font-description">  Based in <%= musician.city %> </p>
-        <% end %>
-
-
+        </div>
       </div>
     </div>
     <% end %>
