--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,33 +8,32 @@
 
     <section id="homepage-content">
       <h3>Bands</h3>
-        <div class="search-category-list">
-          <p>Filter Bands by Genre:</p>
-          <div class="genres-scroll">
-              <%= button_to "All", remote: true, class: "All" %>
-              <% @genres.each do |genre| %>
-                <%= button_to genre.description, remote: true, class: "#{genre.description}" %>
-              <% end %>
-          </div>
-        </div>
         <div class="bands">
             <%= render "home/bands" %>
         </div>
-
-      <h3>Musicians near you</h3>
         <div class="search-category-list">
-          <p>Filter Musicians by Position:</p>
-          <div class="positions-scroll">
-            <%= button_to "All", remote: true, class: "All" %>
-              <% @positions.each do |position| %>
-                <%= button_to position.description, remote: true, class: "#{position.description}" %>
+          <p>Filter by Genre:</p>
+          <div class="genres-scroll">
+              <%= link_to "All", remote: true, class: "All" %>
+              <% @genres.each do |genre| %>
+                <%= link_to genre.description, remote: true, class: "#{genre.description}" %>
               <% end %>
           </div>
         </div>
+
+      <h3>Musicians near you</h3>
         <div class="musicians">
           <%= render "home/musicians" %>
         </div>
-
+        <div class="search-category-list">
+          <p>Filter by Position:</p>
+          <div class="positions-scroll">
+            <%= link_to "All", remote: true, class: "All" %>
+              <% @positions.each do |position| %>
+                <%= link_to position.description, remote: true, class: "#{position.description}" %>
+              <% end %>
+          </div>
+        </div>
     </section>
   </main>
 </body>
