working on heroku

--- a/app/views/musicians/show.html.erb
+++ b/app/views/musicians/show.html.erb
@@ -4,10 +4,10 @@
 
     <h3>Bio</h3>
     <%= @musician.description %><br />
-
-    <button class="button"><a href="mailto:<%= @musician.email%>?Subject=Hello">Contact Me</a></button>
-
-    <%= button_to "Back", request.referer.present? ? request.referer : root_path, method: :get, class: 'button' %><br />
+  <div id = contact >
+      <button class="button"><a href="mailto:<%= @musician.email%>?Subject=Hello">Contact Me</a></button>
+  </div>
+      <%= button_to "Back", request.referer.present? ? request.referer : root_path, method: :get, class: 'button' %><br />
       <% if @musician.skills.count() > 0 %>
         <h3>Skills</h3>
 
