--- a/app/assets/stylesheets/musicians.scss
+++ b/app/assets/stylesheets/musicians.scss
@@ -60,9 +60,25 @@ main {
     height: 100%;
   }
 }
+.contact {
+  display: block;
+
+}
 
 .button {
   background-color: #ccc;
   color: black;
   border-radius: 28px;
+  position: relative;
+  right: 50px;
+  margin-left:auto;
+  margin-right:auto;
+  }
+
+#skill_position_id{
+  width: 50%;
+  display: block;
+  margin-left:auto;
+  margin-right:auto;
+
 }
