Resetting stylesheets to their respective pages

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,7 @@
 @import 'foundation_and_overrides';
 @import 'maps';
-@import 'home';
-@import 'band';
 @import 'search';
-@import 'musicians';
+// @import 'home';
+// @import 'band';
+// @import 'musicians';
 @import 'devise';
