--- a/app/views/bands/show.html.erb
+++ b/app/views/bands/show.html.erb
@@ -1,3 +1,7 @@
+<head>
+  <link rel="stylesheet" href="/stylesheets/band.scss" charset="utf-8">
+</head>
+
 <div class="container">
   <aside class="profile-left">
     <%= image_tag @band.poster.profile %><br />
