--- a/app/views/musicians/show.html.erb
+++ b/app/views/musicians/show.html.erb
@@ -1,3 +1,7 @@
+<head>
+  <link rel="stylesheet" href="/stylesheets/musicians.scss" charset="utf-8">
+</head>
+
 <div class="container">
   <aside>
     <br /><%= image_tag @musician.avatar.profile %><br />
