--- a/app/views/bands/show.html.erb
+++ b/app/views/bands/show.html.erb
@@ -1,5 +1,5 @@
 <head>
-  <link rel="stylesheet" href="/stylesheets/band.scss" charset="utf-8">
+  <%= stylesheet_link_tag "band", media: "all" %>
 </head>
 
 <div class="container">
