--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,7 @@
 <head>
-  <link rel="stylesheet" href="/stylesheets/home.scss" charset="utf-8">
+  <link rel="stylesheet" href="stylesheets/home.scss" charset="utf-8">
+  <%= stylesheet_link_tag "home", media: "all" %>
+
 </head>
 <body>
   <%= render "home/video" %>
