--- a/app/views/musicians/show.html.erb
+++ b/app/views/musicians/show.html.erb
@@ -1,5 +1,5 @@
 <head>
-  <link rel="stylesheet" href="/stylesheets/musicians.scss" charset="utf-8">
+  <%= stylesheet_link_tag "musicians", media: "all" %>
 </head>
 
 <div class="container">
