Set main and aside positions, and started sizing and styling cards.

--- a/app/views/home/_bands.html.erb
+++ b/app/views/home/_bands.html.erb
@@ -1,7 +1,7 @@
 <div class="row" data-equalizer data-equalize-on="medium" id="test-eq">
 
     <% @bands.each do |band| %>
-      <div class="small-4 columns">
+      <div class="large-4 columns">
         <div class="equalizer">
           <div class="card">
           <%= link_to band_path(band.id) do %>
