--- a/app/assets/stylesheets/musicians.scss
+++ b/app/assets/stylesheets/musicians.scss
@@ -1,65 +1,147 @@
-// Place all the styles related to the musicians controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+*,
+*:after,
+*:before {
+  box-sizing: border-box;
+}
+
+html, body {
+  height: 100%;
+  font-family: "Titillium Web", sans-serif;
+}
+
+.container {
+  max-width: 80%;
+  margin-right: auto;
+  margin-left: auto;
+  text-align: center;
+  font-family: "Titillium Web", sans-serif;
+}
+
+aside {
+  margin: 2%;
+  float: left;
+  width: 25%;
+  border: 5px solid #2b2b2b;
+  height: 100%;
+  border-radius: 28px;
+}
 
 main {
-  margin-left:auto;
-  margin-right: auto;
-  text-align: center;
-  justify-content: center;
-  align-items: center;
+  margin: 2%;
+  float: left;
+  width: 65%;
+  border: 5px solid #2b2b2b;
+  height: 100%;
   border-radius: 28px;
-
-  #bands-list {
-  }
-
-  #musicians-list {
-  }
-
-  h1 {
-
-  }
-
-  h2 {
-
-  }
-
-  h3 {
-
-  }
-
-  #bands-owned {
-  }
-
-  #member-of-bands {
-  }
-
-  #youtube-window {
-  }
-
-  #nearby-musicians {
-  }
-
-  .embed-container {
-    position: relative;
-    padding-bottom: 56.25%;
-    padding-top: 30px;
-    height: 0;
-    overflow: hidden;
-    width: 100%;
-    height: auto;
-    margin-bottom: 12px;
-  }
-
-  .embed-container iframe,
-  .embed-container object,
-  .embed-container embed {
-    position: absolute;
-    top: 0; left: 0;
-    width: 100%;
-    height: 100%;
-  }
 }
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Titillium Web", sans-serif;
+}
+
+h1 {
+  font-size: 30pt;
+  font-weight: bold;
+  padding-top: 5%;
+}
+
+h2 {
+  font-size: 15pt;
+  text-decoration: underline;
+}
+
+h3{
+  font-size: 12pt;
+  font-weight: bold;
+}
+
+p {
+  margin: 5%;
+}
+
+#member-position {
+  background-color: #2b2b2b;
+  border-radius: 28pt;
+  width: 50px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+#bands-owned {
+  color: white;
+  width: 80%;
+  margin: 5%;
+  background-color: #2b2b2b;
+  border-radius: 28pt;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+#member-of-bands {
+  color: white;
+  width: 80%;
+  background-color: #2b2b2b;
+  border-radius: 28pt;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+#pending-approvals {
+  color: white;
+  width: 80%;
+  margin-top: 5%;
+  background-color: #2b2b2b;
+  border-radius: 28pt;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+#youtube-window {
+  width: 80%;
+  margin: 5%;
+  background-color: #2b2b2b;
+  border-radius: 28pt;
+  margin: 2%;
+}
+
+#map {
+  margin-left: auto;
+  margin-right: auto;
+  padding-bottom: 25%;
+  margin-bottom: 5%;
+}
+
+#nearby-musicians {
+  color: white;
+  width: 80%;
+  margin: 5%;
+  background-color: #2b2b2b;
+  border-radius: 28pt;
+  margin-right: auto;
+  margin-left: auto;
+  padding-bottom: 4%;
+}
+
+.embed-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 30px;
+  height: 0;
+  overflow: hidden;
+  width: 100%;
+  height: auto;
+  margin-bottom: 12px;
+}
+
+.embed-container iframe,
+.embed-container object,
+.embed-container embed {
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 .contact {
   display: block;
 
