--- a/app/views/musicians/show.html.erb
+++ b/app/views/musicians/show.html.erb
@@ -72,79 +72,76 @@
   <main>
     <h1><%= @musician.firstname %> <%= @musician.lastname %></h1>
 
-    <% @musician.positions.each do |position| %>
-      <!-- <%= position.description %><br /> -->
-      <%= image_tag("skills/lead.png", size:  "50x50") if position.description == "lead" %>
-      <%= image_tag("skills/singer.png", size:  "50x50") if position.description == "singer"%>
-      <%= image_tag("skills/drummer.png", size:  "50x50") if position.description == "drummer"%>
-      <%= image_tag("skills/keyboard.png", size:  "50x50") if position.description == "keyboard"%>
-      <%= image_tag("skills/bass.png", size:  "50x50") if position.description == "bass" %>
-    <% end %>
-
-    <% if musician_signed_in? %>
-      <br><div id="bands-owned">
-        <% if current_musician.id == @musician.id %>
-
-          <% if current_musician.owned_bands.count > 0 %>
-
-            <br /><h2>Bands owned:</h2>
-
-            <% current_musician.owned_bands.each do |band|%>
-              <%= link_to band.name, band_path(band), :method => :get  %><br />
-            <% end %>
-          <% end %>
-      </div>
-
-      <div id="member-of-bands">
-          <% if current_musician.members.count > 0 %>
-
-            <br><h2>Member of:</h2>
-
-            <% current_musician.members.each do |member|%>
-              <%= link_to member.band.name, :method => :get %><br />
-              Position:  <%= member.position.description %><br />
-            <% end %>
-          <% end %>
-      </div>
-
-      <div id="pending-approvals">
-        <% if current_musician.approvals.where(approved: false).count > 0 %>
-
-          <h1>Membership Pending Approval</h1><br />
-
-          <% current_musician.approvals.each do |approval|%>
-
-            <% if approval.approved == false %>
-              Band:  <%= approval.band.name %><br />
-              Position:  <%= approval.member.position.description %><br />
-              Approved:  <%= approval.approved %>
-              <%= button_to 'View Band', band_path(approval.band.id), :method => :get %><br />
-            <% end %>
-          <% end %>
-        <% end %>
-    <% end %>
-  <% end %>
-    <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=#{Figaro.env.google_maps_api_key }&callback=initMap", async: true, defer: true %>
-
-    <div id="youtube-window">
-      <% if @musician.youtube_url && @musician.youtube_url != "" %>
-
-        <br><h2>Demo Reel</h2>
-
-        <div class="embed-container">
-          <%= embed(@musician.youtube_url) %>
-        </div>
+    <div id="member-position">
+      <% @musician.positions.each do |position| %>
+        <%= image_tag("skills/lead.png", size:  "50x50") if position.description == "lead" %>
+        <%= image_tag("skills/singer.png", size:  "50x50") if position.description == "singer"%>
+        <%= image_tag("skills/drummer.png", size:  "50x50") if position.description == "drummer"%>
+        <%= image_tag("skills/keyboard.png", size:  "50x50") if position.description == "keyboard"%>
+        <%= image_tag("skills/bass.png", size:  "50x50") if position.description == "bass" %>
       <% end %>
     </div>
 
+    <div id="member-band-info">
+      <% if musician_signed_in? %><br />
+        <div id="bands-owned">
+          <% if current_musician.id == @musician.id %>
+            <% if current_musician.owned_bands.count > 0 %>
+              <br /><h2>Bands owned:</h2>
+              <% current_musician.owned_bands.each do |band|%>
+                <%= link_to band.name, band_path(band), :method => :get  %><br />
+              <% end %>
+            <% end %>
+        </div>
+
+        <div id="member-of-bands">
+            <% if current_musician.members.count > 0 %>
+              <br><h2>Member of:</h2>
+              <% current_musician.members.each do |member|%>
+                <%= link_to member.band.name, :method => :get %><br />
+                Position:  <%= member.position.description %><br />
+              <% end %>
+            <% end %>
+        </div>
+      </div>
+
+        <div id="pending-approvals">
+          <% if current_musician.approvals.where(approved: false).count > 0 %>
+
+            <br /><h2>Your band applications:</h2><br />
+            <% current_musician.approvals.each do |approval|%>
+              <% if approval.approved == false %>
+                Band:  <%= approval.band.name %><br />
+                Position:  <%= approval.member.position.description %><br />
+                Approved:  <%= approval.approved %>
+                <%= button_to 'View Band', band_path(approval.band.id), :method => :get %><br />
+              <% end %>
+            <% end %>
+          <% end %>
+        </div>
+      <% end %>
+    <% end %>
+      <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=#{Figaro.env.google_maps_api_key }&callback=initMap", async: true, defer: true %>
+
+      <div id="youtube-window">
+        <% if @musician.youtube_url && @musician.youtube_url != "" %>
+
+          <br><h2>Demo Reel</h2>
+
+          <div class="embed-container">
+            <%= embed(@musician.youtube_url) %>
+          </div>
+        <% end %>
+      </div>
+
     <div id="nearby-musicians">
       <br />
-        Musicians near
+        <h2>Musicians near
         <% if @musician == current_musician %>
           you:
         <% else %>
           <%= @musician.firstname %>:<br />
-        <% end %>
+        <% end %></h2>
 
       <div id="map" data-latitude=<%= @musician.latitude %> data-longitude=<%= @musician.longitude %>
       </div>
