making profile pictures smaller for heroku

--- a/app/views/home/_musicians.html.erb
+++ b/app/views/home/_musicians.html.erb
@@ -6,7 +6,7 @@
           <%= link_to musician_path(musician.id) do %>
 
 
-            <%= image_tag musician.profile, class: "musician-image" %>
+            <%= image_tag musician, class: "musician-image" %>
 
             <% musician.positions.each do |position| %>
               <!-- <%= position.description %><br /> -->
